user service controller test cases